--- a/hoj-vue/package.json
+++ b/hoj-vue/package.json
@@ -17,7 +17,7 @@
     "font-awesome": "^4.7.0",
     "highlight.js": "^10.3.2",
     "jquery": "^3.5.1",
-    "mavon-editor": "^2.9.1",
+    "mavon-editor": "^2.10.4",
     "moment": "^2.29.1",
     "muse-ui": "^3.0.2",
     "nprogress": "^0.2.0",
@@ -27,6 +27,7 @@
     "vue-clipboard2": "^0.3.1",
     "vue-codemirror-lite": "^1.0.4",
     "vue-cropper": "^0.5.5",
+    "vue-dompurify-html": "^2.5.0",
     "vue-echarts": "^5.0.0-beta.0",
     "vue-i18n": "^8.24.4",
     "vue-katex-auto-render": "^0.1.3",
@@ -35,7 +36,6 @@
     "vue-particles": "^1.0.9",
     "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.6.12",
-    "vue-xss": "^1.0.4",
     "vuex": "^3.4.0",
     "vuex-router-sync": "^5.0.0",
     "vxe-table": "^2.9.26",
